--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "admin",
-  "version": "0.0.0",
+  "name": "eb-admin",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,27 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular-devkit/build-angular": "^0.802.2",
+    "@angular/animations": "~8.2.2",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "~8.2.2",
+    "@angular/compiler": "~8.2.2",
+    "@angular/core": "~8.2.2",
+    "@angular/forms": "~8.2.2",
+    "@angular/platform-browser": "~8.2.2",
+    "@angular/platform-browser-dynamic": "~8.2.2",
+    "@angular/router": "~8.2.2",
+    "@auth0/angular-jwt": "^3.0.0",
+    "@nebular/auth": "^4.1.3",
+    "@nebular/bootstrap": "^4.1.3",
+    "@nebular/eva-icons": "^4.1.3",
+    "@nebular/theme": "^4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "eva-icons": "^1.1.1",
+    "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
+    "@angular/cli": "~8.2.2",
+    "@angular/compiler-cli": "~8.2.2",
+    "@angular/language-service": "~8.2.2",
+    "@schematics/angular": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,6 +53,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.5.3"
   }
 }
