--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "eva-icons": "^1.1.1",
+    "ng2-completer": "^3.0.2",
+    "ng2-smart-table": "^1.5.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
