--- a/package.json
+++ b/package.json
@@ -11,38 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.802.2",
-    "@angular/animations": "~8.2.2",
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "~8.2.2",
-    "@angular/compiler": "~8.2.2",
-    "@angular/core": "~8.2.2",
-    "@angular/forms": "~8.2.2",
-    "@angular/platform-browser": "~8.2.2",
-    "@angular/platform-browser-dynamic": "~8.2.2",
-    "@angular/router": "~8.2.2",
-    "@auth0/angular-jwt": "^3.0.0",
-    "@nebular/auth": "^4.1.3",
-    "@nebular/bootstrap": "^4.1.3",
-    "@nebular/eva-icons": "^4.1.3",
-    "@nebular/theme": "^4.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
-    "eva-icons": "^1.1.1",
-    "ng2-completer": "^3.0.2",
-    "ng2-smart-table": "^1.5.0",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "@angular-devkit/build-angular": "0.803.24",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@auth0/angular-jwt": "^3.0.1",
+    "@nebular/auth": "^4.6.0",
+    "@nebular/bootstrap": "^4.6.0",
+    "@nebular/eva-icons": "^4.6.0",
+    "@nebular/theme": "^4.6.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
+    "eva-icons": "^1.1.3",
+    "ng2-completer": "^3.0.3",
+    "ng2-smart-table": "1.5.0",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular/cli": "~8.2.2",
-    "@angular/compiler-cli": "~8.2.2",
-    "@angular/language-service": "~8.2.2",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@schematics/angular": "~7.1.0",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
@@ -52,7 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3"
